--- a/csomagok.html
+++ b/csomagok.html
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="assets/dist/css/max576.css">
 
 </head>
-<body style="background-color: #FFFFFF;">
+<body>
     <header class="">
-        <nav class="navbar navbar-expand-xl navbar-light ">
+        <nav class="navbar navbar-expand-xl navbar-light navshadow">
           <a href="index.html"><img class="my-4 navlogo" src="images/Logo.svg" /></a>
           <div class="d-xl-none"><a class="ujweb" href="/weboldaltervezo-1-csomagvalaszto.html">+ Új weboldal</a></div>
           <button class="navbar-toggler btnm" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,55 +44,86 @@
           </div>
         </nav>
       </header>
-      <div class="mtitle">
-        <p class="mtitletxt" style="letter-spacing: 0.2em !important">VÁLASZD A legjobb MEGOLDÁST!</p>
-        <p class="mtitletxt2">WEBOLDAL CSOMAGOK</p>
+      <div class="container">
+        <div class="mtitle">
+          <p class="mtitletxt" style="letter-spacing: 0.2em !important">VÁLASZD A legjobb MEGOLDÁST!</p>
+          <p class="mtitletxt2">WEBOLDAL CSOMAGOK</p>
+        </div>
+        <div style="display: flex;" class=" justify-content-center" >
+          <a class="webcs" href="weboldaltervezo-1-csomagvalaszto.html">Ingyen weboldal civil szervezeteknek</a>
+        </div>
       </div>
-      <div style="display: flex;" class=" justify-content-center" >
-        <a class="webcs" href="weboldaltervezo-1-csomagvalaszto.html">Ingyen weboldal civil szervezeteknek</a>
-      </div>
+
       
       <div class="bundles container" style="display: flex; align-items: center;">
         <div class="lists" style="float:left">
           <div class="head"></div>
           <div class="description"></div>
-          <div style="height: 35px;" class="price"></div>
+          <div style="height: 38px;" class="price"></div>
           <div class="title">Weboldal</div>
           <ul>
-            <li id="info">Választható, mobilbarát designterv</li>
-            <li id="info">Adminisztrációs felület</li>
-            <li id="info">E-mail fiók, levelezés</li>
-            <li id="info">Domain (.hu), tárhely 1 Gb</li>
+            <li id="info">Választható, mobilbarát designterv
+              <img src="images/info.svg" alt="Info">
+            </li>
+            <li id="info">Adminisztrációs felület
+              <img src="images/info.svg" alt="Info">
+            </li>
+            <li id="info">E-mail fiók, levelezés
+              <img src="images/info.svg" alt="Info">
+            </li>
+            <li id="info">Domain (.hu), tárhely 1 Gb
+              <img src="images/info.svg" alt="Info">
+            </li>
           </ul>
           <div class="title">Tartalomkészítés</div>
           <ul>
-            <li id="info">Webszövegírás</li>
-            <li id="info">Alap SEO beállítások és szövegírás</li>
-            <li id="info">Képek és bannerek készítése</li>
-            <li id="info">Komplett tartalomkészítés</li>
-            <li id="info">Weboldaltartalom feltöltés</li>
+            <li id="info">Webszövegírás
+              <img src="images/info.svg" alt="Info">
+            </li>
+            <li id="info">Alap SEO beállítások és szövegírás
+              <img src="images/info.svg" alt="Info">
+            </li>
+            <li id="info">Képek és bannerek készítése
+              <img src="images/info.svg" alt="Info">
+            </li>
+            <li id="info">Komplett tartalomkészítés
+              <img src="images/info.svg" alt="Info">
+            </li>
+            <li id="info">Weboldaltartalom feltöltés
+              <img src="images/info.svg" alt="Info">
+            </li>
           </ul>
           <div class="title">Marketing</div>
           <ul>
-            <li id="info">Facebook Vállalkozáskezelő</li>
-            <li id="info">Google Ads</li>
-            <li id="info">Google Analytics létrehozása</li>
-            <li id="info">Google Cégem</li>
-            <li id="info">Google Search Console</li>
+            <li id="info">Facebook Vállalkozáskezelő
+              <img src="images/info.svg" alt="Info">
+            </li>
+            <li id="info">Google Ads
+              <img src="images/info.svg" alt="Info">
+            </li>
+            <li id="info">Google Analytics létrehozása
+              <img src="images/info.svg" alt="Info">
+            </li>
+            <li id="info">Google Cégem
+              <img src="images/info.svg" alt="Info">
+            </li>
+            <li id="info">Google Search Console
+              <img src="images/info.svg" alt="Info">
+            </li>
           </ul>
         </div>
-        <div class="start" style="float:left">
+        <div id="starttable" class="start" style="float:left">
           <div id="start" class="head">START</div>
           <div class="description">Modern weboldalt, reszponzív megjelenést kapsz, az adminisztrációs felületen pedig magad alakíthatod ki a weboldalad teljes szöveges és képi tartalmát.</div>
-          <div id="pricest" class="price">49.900 Ft + ÁFA</div>
-          <div style="height: 30px;"></div>
+          <div id="pricest" class="price mt-2"><span style="font-weight: 800;">49.900 Ft</span><span style="font-size: 0.7rem;">+ ÁFA</span></div>
+          <div style="height: 43px;"></div>
           <ul>
           <li style="text-align: center;background-color: #f5f5f5;"><img src="images/blue-tick.svg" alt="Pipa"></li>
           <li style="text-align: center;"><img src="images/blue-tick.svg" alt="Pipa"></li>
           <li style="text-align: center;background-color: #f5f5f5;"><img src="images/blue-tick.svg" alt="Pipa"></li>
           <li style="text-align: center;"><img src="images/blue-tick.svg" alt="Pipa"></li>
           </ul>
-          <div style="height: 30px;"></div>
+          <div style="height: 35px;"></div>
           <ul >
           <li style="text-align: center;background-color: #f5f5f5;"><img src="images/blue-line.svg" alt="Vonal"></li>
           <li style="text-align: center;"><img src="images/blue-line.svg" alt="Vonal"></li>
@@ -100,7 +131,7 @@
           <li style="text-align: center;"><img src="images/blue-line.svg" alt="Vonal"></li>
           <li style="text-align: center;background-color: #f5f5f5;"><img src="images/blue-line.svg" alt="Vonal"></li>
           </ul>
-          <div style="height: 30px;"></div>
+          <div style="height: 35px;"></div>
           <ul>
           <li style="text-align: center; background-color: #f5f5f5;"><img src="images/blue-line.svg" alt="Vonal"></li>
           <li style="text-align: center;"><img src="images/blue-line.svg" alt="Vonal"></li>
@@ -108,19 +139,22 @@
           <li style="text-align: center;"><img src="images/blue-line.svg" alt="Vonal"></li>
           <li style="text-align: center;background-color: #f5f5f5;"><img src="images/blue-line.svg" alt="Vonal"></li>
           </ul>
+          <div class="choice">
+            <a href="#" style="color: #FFFFFF;">EZT VÁLASZTOM</a>
+          </div>
         </div>
         <div class="optimum" style="float:left">
           <div id="optimum" class="head">OPTIMUM</div>
           <div class="description">Kulcsrakész weboldal, feltöltve kreatív szöveges tartalommal, tevékenységedre szabott kommunikációval és vizuális elemekkel.</div>
-          <div id="priceop" class="price">99.900 Ft + ÁFA</div>
-          <div style="height: 30px;"></div>
+          <div id="priceop" class="price mt-2"><span style="font-weight: 800;">99.900 Ft</span><span style="font-size: 0.7rem;">+ ÁFA</span></div>
+          <div style="height: 43px;"></div>
           <ul>
             <li style="text-align: center;background-color: #f5f5f5;"><img src="images/red-tick.svg" alt="Pipa"></li>
             <li style="text-align: center;"><img src="images/red-tick.svg" alt="Pipa"></li>
             <li style="text-align: center;background-color: #f5f5f5;"><img src="images/red-tick.svg" alt="Pipa"></li>
             <li style="text-align: center;"><img src="images/red-tick.svg" alt="Pipa"></li>
           </ul>
-          <div style="height: 30px;"></div>
+          <div style="height: 35px;"></div>
           <ul>
             <li style="text-align: center;background-color: #f5f5f5;"><img src="images/red-tick.svg" alt="Pipa"></li>
             <li style="text-align: center;"><img src="images/red-tick.svg" alt="Pipa"></li>
@@ -128,7 +162,7 @@
             <li style="text-align: center;"><img src="images/red-tick.svg" alt="Pipa"></li>
             <li style="text-align: center;background-color: #f5f5f5;"><img src="images/red-tick.svg" alt="Pipa"></li>
           </ul>
-          <div style="height: 30px;"></div>
+          <div style="height: 35px;"></div>
           <ul>
             <li style="text-align: center;background-color: #f5f5f5;"><img src="images/red-line.svg" alt="Vonal"></li>
             <li style="text-align: center;"><img src="images/red-line.svg" alt="Vonal"></li>
@@ -136,27 +170,22 @@
             <li style="text-align: center;"><img src="images/red-line.svg" alt="Vonal"></li>
             <li style="text-align: center;background-color: #f5f5f5;"><img src="images/red-line.svg" alt="Vonal"></li>
           </ul>
+          <div class="choice2">
+            <a href="#" style="color: #FFFFFF;">EZT VÁLASZTOM</a>
+          </div>
         </div>
         <div class="pro" style="float:left">
           <div id="pro" class="head">PRO</div>
           <div class="description">Ha a weboldal elkészítésén túl szeretnél sikereket elérni az online hirdetési térben is, akkor ez a neked való csomag. Szakértő kollégáink elindítanak a helyes úton.</div>
-          <div id="pricepr" class="price">199.900 Ft + ÁFA</div>
-          <div style="height: 30px;"></div>
+          <div id="pricepr" class="price mt-2"><span style="font-weight: 800;">199.900 Ft</span><span style="font-size: 0.7rem;">+ ÁFA</span></div>
+          <div style="height: 43px;"></div>
           <ul>
             <li style="text-align: center;background-color: #f5f5f5;"><img src="images/dark-tick.svg" alt="Pipa"></li>
             <li style="text-align: center;"><img src="images/dark-tick.svg" alt="Pipa"></li>
             <li style="text-align: center;background-color: #f5f5f5;"><img src="images/dark-tick.svg" alt="Pipa"></li>
             <li style="text-align: center;"><img src="images/dark-tick.svg" alt="Pipa"></li>
           </ul>
-          <div style="height: 30px;"></div>
-          <ul>
-            <li style="text-align: center;background-color: #f5f5f5;"><img src="images/dark-tick.svg" alt="Pipa"></li>
-            <li style="text-align: center;"><img src="images/dark-tick.svg" alt="Pipa"></li>
-            <li style="text-align: center;background-color: #f5f5f5;"><img src="images/dark-tick.svg" alt="Pipa"></li>
-            <li style="text-align: center;"><img src="images/dark-tick.svg" alt="Pipa"></li>
-            <li style="text-align: center;background-color: #f5f5f5;"><img src="images/dark-tick.svg" alt="Pipa"></li>
-          </ul>
-          <div style="height: 30px;"></div>
+          <div style="height: 35px;"></div>
           <ul>
             <li style="text-align: center;background-color: #f5f5f5;"><img src="images/dark-tick.svg" alt="Pipa"></li>
             <li style="text-align: center;"><img src="images/dark-tick.svg" alt="Pipa"></li>
@@ -164,6 +193,17 @@
             <li style="text-align: center;"><img src="images/dark-tick.svg" alt="Pipa"></li>
             <li style="text-align: center;background-color: #f5f5f5;"><img src="images/dark-tick.svg" alt="Pipa"></li>
           </ul>
+          <div style="height: 35px;"></div>
+          <ul>
+            <li style="text-align: center;background-color: #f5f5f5;"><img src="images/dark-tick.svg" alt="Pipa"></li>
+            <li style="text-align: center;"><img src="images/dark-tick.svg" alt="Pipa"></li>
+            <li style="text-align: center;background-color: #f5f5f5;"><img src="images/dark-tick.svg" alt="Pipa"></li>
+            <li style="text-align: center;"><img src="images/dark-tick.svg" alt="Pipa"></li>
+            <li style="text-align: center;background-color: #f5f5f5;"><img src="images/dark-tick.svg" alt="Pipa"></li>
+          </ul>
+          <div class="choice3">
+            <a href="#" style="color: #FFFFFF;">EZT VÁLASZTOM</a>
+          </div>
         </div>
       </div>
 
@@ -171,7 +211,7 @@
     <footer class="footerh">
         <div class="container">
           <div id="flex4" class="row pt-5">
-            <img id="A" src="images/logo2.svg" alt="" class="">
+            <img id="A" src="images/logo2.svg" alt="Logo" class="m-auto">
               <ul id="B" class="list-inline">
                 <li class="list-inline-item"><a href="#" target="_blank" title="Facebook"><img class="w-auto" src="images/facebook.svg" alt=""></i></a></li>
                 <li class="list-inline-item"><a href="#" target="_blank" title="Instagram"><img src="images/instagram.svg"></i></a></li>
