--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
     </style>
   </head>
-  <body style="background-color: #FDFDFD;">
+  <body>
     <!--Navbar-->
     <header class="">
-      <nav class="navbar navbar-expand-xl navbar-light ">
+      <nav class="navbar navbar-expand-xl navbar-light navshadow ">
         <a href="index.html"><img class="my-4 navlogo" src="images/Logo.svg" /></a>
         <div class="d-xl-none"><a class="ujweb" href="/weboldaltervezo-1-csomagvalaszto.html">+ Új weboldal</a></div>
         <button class="navbar-toggler btnm" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -82,42 +82,45 @@
     </div>
 
     <!--Second div-->
-    <div class="nopad position-relative">
-      <img class="img"
-        src="images/Understanding the Difficulties of Responsive Banners for Website Design and Implementation  copy 1.png"/>
-      <div style="display: flex;" class="justify-content-center">
-        <div class="container cont">
-          <div class="rect2">
-            <p class="ingyen">
-              Most INGYEN készíthetsz weboldalt alapítványod, egyesületed, civil
-              szervezeted számára!
-            </p>
-              <a href="ingyen-weboldal.html" class="resz">Részletek</a>
-              <a href="weboldaltervezo-1-csomagvalaszto.html" class="bele">Belevágok</a>
+    <section>
+      <div class="nopad position-relative">
+        <img class="img"
+          src="images/Understanding the Difficulties of Responsive Banners for Website Design and Implementation  copy 1.png"/>
+        <div style="display: flex;" class="justify-content-center">
+          <div class="container cont">
+            <div class="rect2">
+              <p class="ingyen">
+                Most INGYEN készíthetsz weboldalt alapítványod, egyesületed, civil
+                szervezeted számára!
+              </p>
+                <a href="ingyen-weboldal.html" class="resz">Részletek</a>
+                <a href="weboldaltervezo-1-csomagvalaszto.html" class="bele">Belevágok</a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <!--THIRD DIV-->
-    <div id="flex2" class="container pt-4">
-      <div id="megtud">
-        <p class="txt">Te is könnyedén meg tudod csinálni.</p>
+      <!--THIRD DIV-->
+      <div id="flex2" class="container pt-4">
+        <div id="megtud">
+          <p class="txt">Te is könnyedén meg tudod csinálni.</p>
+        </div>
+        <div id="megtud2">
+          <ul class="group1155-1">
+            <li class="">Csomagokból választhatsz</li>
+            <li class="group1155-1text">Valóban egyszerű szerkeszteni</li>
+            <li class="group1155-1text2">Gyors és könnyen értelmezhető</li>
+          </ul>
+        </div>
+        <div id="megtud3">
+          <ul class="group1155">
+            <li class="">Mobilbarát megjelenés</li>
+            <li class="group1155text">Időt és energiát spórolsz</li>
+            <li class="">Bárhonnan szerkesztheted</li>
+          </ul>
+        </div>
       </div>
-      <div id="megtud2">
-        <ul class="group1155-1">
-          <li class="">Csomagokból választhatsz</li>
-          <li class="group1155-1text">Valóban egyszerű szerkeszteni</li>
-          <li class="group1155-1text2">Gyors és könnyen értelmezhető</li>
-        </ul>
-      </div>
-      <div id="megtud3">
-        <ul class="group1155">
-          <li class="">Mobilbarát megjelenés</li>
-          <li class="group1155text">Időt és energiát spórolsz</li>
-          <li class="">Bárhonnan szerkesztheted</li>
-        </ul>
-      </div>
-    </div>
+    </section>
+    
     <!--FOURTH DIV-->
     <div class="mtitle">
       <p class="mtitletxt">sikerre optimalizált weboldal</p>
@@ -244,71 +247,64 @@
     </div>
     </div>
     <!--Eleventh DIV-->
-    <div class="container justify-content-center" style="display: flex;">
-      <div class="webcs3">
-        <p class="webcs3txt"><span class="font-weight-bold">Nagyon elégedettek,</span><br> akik már velünk készítették a weboldalukat</p>
-        <p class="webcs3txt2">Understand to achieve anything requires faith and belief in yourself, vision, hard work, determination, and dedication.</p>
-    </div>
-    </div>
-    <!--TWELTH DIV-->
-    <div class="row pt-5">
-      <div style="display: flex;" class="row container">
-        <ul class="tablet tablet1">
-          <div class="box3 pt-4">
+    <section>
+      <div class="container justify-content-center" style="display: flex;">
+        <div class="webcs3">
+          <p class="webcs3txt"><span class="font-weight-bold">Nagyon elégedettek,</span><br> akik már velünk készítették a weboldalukat</p>
+          <p class="webcs3txt2">Understand to achieve anything requires faith and belief in yourself, vision, hard work, determination, and dedication.</p>
+      </div>
+      </div>
+      <!--TWELTH DIV-->
+      <div class="row pt-5">
+        <div style="display: flex;" class="row container">
+            <ul class="box3 pt-1 mt-4">
+                <img class="img3" src="images/original 1.jpg">
+                <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+                <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+            </ul>
+            <ul id="F" class="box3 pt-1 mt-4">
+                  <img class="img3" src="images/original 1.jpg">
+                  <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+                  <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+            </ul>
+            <ul class="box3 pt-1 mt-4">
               <img class="img3" src="images/original 1.jpg">
               <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
               <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-          </div>
-              <div id="F" class="box3 pt-4">
-                <img class="img3" src="images/original 1.jpg">
-                <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-                <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-              </div>
-        </ul>
-        <ul class="tablet tablet1">
-          <div class="box3 pt-4">
-            <img class="img3" src="images/original 1.jpg">
-            <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-            <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-            </div>
-              <div id="F" class="box3 pt-4">
-                <img class="img3" src="images/original 1.jpg">
-                <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-                <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-            </div>
-        </ul>
-        <ul class="tablet tablet1">
-          <div class="box3 pt-4">
-            <img class="img3" src="images/original 1.jpg">
-            <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-            <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-            </div>
-              <div id="F" class="box3 pt-4">
-                <img class="img3" src="images/original 1.jpg">
-                <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-                <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-            </div>
-        </ul>
-        <ul class="tablet tablet1">
-          <div class="box3 pt-4">
-            <img class="img3" src="images/original 1.jpg">
-            <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-            <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-            </div>
-              <div id="F" class="box3 pt-4">
-                <img class="img3" src="images/original 1.jpg">
-                <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-                <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-            </div>
-        </ul>
-      </div>
-      </div>
-    </div>
-    
-    <!--THIRTEENTH DIV-->
-      <div class="row pt-5">
-          <a class="webcs4" href="referenciák.html">referenciák</a>
-      </div>
+              </ul>
+              <ul id="F" class="box3 pt-1 mt-4">
+                  <img class="img3" src="images/original 1.jpg">
+                  <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+                  <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+              </ul>
+            <ul class="box3 pt-1 mt-4">
+              <img class="img3" src="images/original 1.jpg">
+              <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+              <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+              </ul>
+              <ul id="F" class="box3 pt-1 mt-4">
+                  <img class="img3" src="images/original 1.jpg">
+                  <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+                  <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+              </ul>
+            <ul class="box3 pt-1 mt-4">
+              <img class="img3" src="images/original 1.jpg">
+              <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+              <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+              </ul>
+              <ul id="F" class="box3 pt-1 mt-4">
+                  <img class="img3" src="images/original 1.jpg">
+                  <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+                  <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+              </ul>
+        </div>
+        </div>      
+      <!--THIRTEENTH DIV-->
+        <div class="row pt-5">
+            <a class="webcs4" href="referenciák.html">referenciák</a>
+        </div>
+    </section>
+
 
     <!--FOOTER-->
     <footer class="footerh">
