--- a/referenciák.html
+++ b/referenciák.html
@@ -18,10 +18,11 @@
 
 
 </head>
-<body style="background-color: #FDFDFD;">
+<body>
+    <!--HEADER-->
     <header class="">
-        <nav class="navbar navbar-expand-xl navbar-light ">
-          <img class="my-4 navlogo" src="images/Logo.svg" />
+        <nav class="navbar navbar-expand-xl navbar-light navshadow" style="padding-left: 89px; padding-right: 74px;">
+          <a href="index.html"><img class="my-4 navlogo" src="images/Logo.svg" /></a>
           <div class="d-xl-none"><a class="ujweb" href="/weboldaltervezo-1-csomagvalaszto.html">+ Új weboldal</a></div>
           <button class="navbar-toggler btnm" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -52,20 +53,20 @@
     
       <div class="row">
         <div style="display: flex; gap: 30px;" class="row container refpic">
-            <ul class="">
-                <div class="box3">
-                <img class="img3" style="width: 254px;" src="images/original 1.jpg">
-                <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-                <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-                </div>
-                </ul>
-                <ul>
-                <div class="box3">
-                <img class="img3" style="width: 254px;" src="images/original 1.jpg">
-                <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-                <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-                </div>
-                </ul>
+          <ul class="">
+            <div class="box3">
+            <img class="img3" style="width: 254px;" src="images/original 1.jpg">
+            <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+            <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+            </div>
+          </ul>
+          <ul>
+            <div class="box3">
+            <img class="img3" style="width: 254px;" src="images/original 1.jpg">
+            <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+            <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+            </div>
+          </ul>
           <ul class="">
             <div class="box3">
             <img class="img3" style="width: 254px;" src="images/original 1.jpg">
@@ -79,70 +80,69 @@
             <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
             <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
             </div>
-            </ul>
+          </ul>
           <ul class="">
             <div class="box3">
             <img class="img3"style="width: 254px;" src="images/original 1.jpg">
             <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
             <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
             </div>
-            </ul>
-            <ul>
+          </ul>
+          <ul>
             <div class="box3">
             <img class="img3"style="width: 254px;" src="images/original 1.jpg">
             <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
             <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
             </div>
-            </ul>
-            <ul class="">
+          </ul>
+          <ul class="">
             <div class="box3">
             <img class="img3"style="width: 254px;" src="images/original 1.jpg">
             <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
             <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
             </div>
-            </ul>
-            <ul>
+          </ul>
+          <ul>
             <div class="box3">
             <img class="img3"style="width: 254px;" src="images/original 1.jpg">
             <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
             <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
             </div>
-            </ul>
-            <ul>
-                <div class="box3">
-                <img class="img3"style="width: 254px;" src="images/original 1.jpg">
-                <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-                <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-                </div>
-                </ul>
-                <ul>
-                    <div class="box3">
-                    <img class="img3"style="width: 254px;" src="images/original 1.jpg">
-                    <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-                    <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-                    </div>
-                    </ul>
-                    <ul>
-                        <div class="box3">
-                        <img class="img3"style="width: 254px;" src="images/original 1.jpg">
-                        <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-                        <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-                        </div>
-                        </ul>
-                        <ul>
-                            <div class="box3">
-                            <img class="img3"style="width: 254px;" src="images/original 1.jpg">
-                            <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-                            <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-                            </div>
-                            </ul>
-
-        </div>
-        </div>
-      </div>
+          </ul>
+          <ul>
+            <div class="box3">
+            <img class="img3"style="width: 254px;" src="images/original 1.jpg">
+            <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+            <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+            </div>
+          </ul>
+          <ul>
+            <div class="box3">
+            <img class="img3"style="width: 254px;" src="images/original 1.jpg">
+            <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+            <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+            </div>
+          </ul>
+          <ul>
+            <div class="box3">
+            <img class="img3"style="width: 254px;" src="images/original 1.jpg">
+            <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+            <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+            </div>
+          </ul>
+          <ul>
+            <div class="box3">
+            <img class="img3"style="width: 254px;" src="images/original 1.jpg">
+            <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+            <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+            </div>
+          </ul>
+       </div>
+       </div>
       <div class="row">
         <button class="webcs">mutass többet</button>
       </div>
+      <!--FOOTER-->
       <footer class="footerh">
         <div class="container">
           <div id="flex4" class="row pt-5">
@@ -180,6 +180,7 @@
             <p class="copy">Copyright © 2022 www.weblet.hu</p>
           </div>
       </div>
+      </footer>
 
       <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
