--- a/ingyen-weboldal.html
+++ b/ingyen-weboldal.html
@@ -16,9 +16,10 @@
     <link rel="stylesheet" href="assets/dist/css/ingyenweb.css">
     <link rel="stylesheet" href="assets/dist/css/max576.css">
 </head>
-<body style="background-color: #FDFDFD;">
+<body>
+  <!--HEADER-->
     <header class="">
-      <nav class="navbar navbar-expand-xl navbar-light ">
+      <nav class="navbar navbar-expand-xl navbar-light navshadow">
         <a href="index.html"><img class="my-4 navlogo" src="images/Logo.svg" /></a>
         <div class="d-xl-none"><a class="ujweb" href="/weboldaltervezo-1-csomagvalaszto.html">+ Új weboldal</a></div>
         <button class="navbar-toggler btnm" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +45,8 @@
       </nav>
     </header>
 
-    <div>
+    <section>
+      <div>
         <div class="mtitle">
             <p class="mtitletxt" style="letter-spacing: 0.2em !important">INGYEN WEBOLDAL PROGRAM</p>
             <p class="mtitletxt2">CIVIL SZERVEZETEK RÉSZÉRE</p>
@@ -88,13 +90,13 @@
             </div>
           </div>
       </div>
+    </section>
 
-
-    <div class="mtitle">
+    <section>
+      <div class="mtitle">
         <p class="mtitletxt">sikerre optimalizált weboldal</p>
         <p class="mtitletxt2">Mindent tud, amire szükséged van</p>
       </div>
-      <!--FIFTH DIV-->
       <div id="flex3" class="row divco justify-content-center">
         <div class="row container">
           <div id="B1" >
@@ -152,114 +154,117 @@
               <img class="img4" src="images/Group 12.svg" alt="">
         </div>
       </div>
-
-      <div class="mtitle">
-        <p class="mtitletxt">pár perc alatt kész</p>
-        <p class="mtitletxt2">Ilyen egyszerű a weboldal létrehozása</p>
-    </div>
-    <!--EIGTH DIV-->
-    <div class="container">
-      <div class="row gap1">
-        <ul class="col-2 tablet marginleft">
-          <div class="box2">
-            <img class="img5" src="images/Share Circle.svg">
-            <li class="box2txt ">Megnézed a csomagokat és kiválasztod a legmegfelelőbbet</li>
-          </div>
-        </ul>
-        <ul class="col-2 tablet">
-          <div class="box2">
-            <img class="img5" src="images/Window Frame.svg">
-            <li class="box2txt ">Megadod a domain neved, ha már van, vagy befoglalsz egy újat</li>
-          </div>
-        </ul>
-        <ul class="col-2 tablet">
-          <div class="box2">
-            <img class="img5" src="images/Ruler Cross Pen.svg">
-            <li class="box2txt ">Sablont és színeket választasz, feltöltöd a logód, ha már van vagy kérsz egy újra tervet</li>
-          </div>
-        </ul>
-        <ul class="col-2 tablet">
-          <div class="box2">
-            <img class="img5" src="images/Widget 5.svg">
-            <li class="box2txt pl-2 pr-2">Kiválasztod azokat modulokat, amikre szükséged van a weboldaladhoz</li>
-          </div>
-        </ul>
-        <ul class="col-1 tablet">
-          <div class="box2">
-            <img class="img5" src="images/Cup Star.svg">
-            <li class="box2txt box2txt2">Kész a weboldalad!</li>
-          </div>
-        </ul>
+    </section>
+    
+      <section>
+        <div class="mtitle">
+          <p class="mtitletxt">pár perc alatt kész</p>
+          <p class="mtitletxt2">Ilyen egyszerű a weboldal létrehozása</p>
+         </div>
+  
+      <div class="container">
+        <div class="row gap1">
+          <ul class="col-2 tablet marginleft">
+            <div class="box2">
+              <img class="img5" src="images/Share Circle.svg">
+              <li class="box2txt ">Megnézed a csomagokat és kiválasztod a legmegfelelőbbet</li>
+            </div>
+          </ul>
+          <ul class="col-2 tablet">
+            <div class="box2">
+              <img class="img5" src="images/Window Frame.svg">
+              <li class="box2txt ">Megadod a domain neved, ha már van, vagy befoglalsz egy újat</li>
+            </div>
+          </ul>
+          <ul class="col-2 tablet">
+            <div class="box2">
+              <img class="img5" src="images/Ruler Cross Pen.svg">
+              <li class="box2txt ">Sablont és színeket választasz, feltöltöd a logód, ha már van vagy kérsz egy újra tervet</li>
+            </div>
+          </ul>
+          <ul class="col-2 tablet">
+            <div class="box2">
+              <img class="img5" src="images/Widget 5.svg">
+              <li class="box2txt pl-2 pr-2">Kiválasztod azokat modulokat, amikre szükséged van a weboldaladhoz</li>
+            </div>
+          </ul>
+          <ul class="col-1 tablet">
+            <div class="box2">
+              <img class="img5" src="images/Cup Star.svg">
+              <li class="box2txt box2txt2">Kész a weboldalad!</li>
+            </div>
+          </ul>
+        </div>
       </div>
-    </div>
-    <!--NEINTH DIV-->
-    <div style="display: flex;" class=" justify-content-center" >
-        <a class="webcs2" href="weboldaltervezo-1-csomagvalaszto.html">Irány a weboldaltervező</a>
-    </div>
-        <div class="container justify-content-center" style="display: flex;">
-            <div class="webcs3">
-              <p class="webcs3txt"><span class="font-weight-bold">Nagyon elégedettek,</span><br> akik már velünk készítették a weboldalukat</p>
-              <p class="webcs3txt2">Understand to achieve anything requires faith and belief in yourself, vision, hard work, determination, and dedication.</p>
-          </div>
-          </div>
-          <!--TWELTH DIV-->
-          <div class="row pt-5">
-            <div style="display: flex;" class="row container">
-              <ul class="tablet tablet1">
-                <div class="box3">
-                    <img class="img3" src="images/original 1.jpg">
-                    <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-                    <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+      <div style="display: flex;" class=" justify-content-center" >
+          <a class="webcs2" href="weboldaltervezo-1-csomagvalaszto.html">Irány a weboldaltervező</a>
+      </div>
+      </section>
+    <section>
+      <div class="container justify-content-center" style="display: flex;">
+        <div class="webcs3">
+          <p class="webcs3txt"><span class="font-weight-bold">Nagyon elégedettek,</span><br> akik már velünk készítették a weboldalukat</p>
+          <p class="webcs3txt2">Understand to achieve anything requires faith and belief in yourself, vision, hard work, determination, and dedication.</p>
+      </div>
+      </div>
+      <div class="row pt-5">
+        <div style="display: flex; gap: 15px" class="row container refpic">
+          <ul class="tablet tablet1">
+            <div class="box3">
+                <img class="img3" style="width: 254px;" src="images/original 1.jpg">
+                <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+                <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+            </div>
+                <div id="F" class="box3">
+                  <img class="img3" style="width: 254px;" src="images/original 1.jpg">
+                  <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+                  <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
                 </div>
-                    <div id="F" class="box3">
-                      <img class="img3" src="images/original 1.jpg">
-                      <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-                      <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-                    </div>
-              </ul>
-              <ul class="tablet tablet1">
-                <div class="box3">
-                  <img class="img3" src="images/original 1.jpg">
+          </ul>
+          <ul class="tablet tablet1">
+            <div class="box3">
+              <img class="img3" style="width: 254px;" src="images/original 1.jpg">
+              <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+              <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+              </div>
+                <div id="F" class="box3">
+                  <img class="img3"style="width: 254px;" src="images/original 1.jpg">
                   <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
                   <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-                  </div>
-                    <div id="F" class="box3">
-                      <img class="img3" src="images/original 1.jpg">
-                      <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-                      <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-                  </div>
-              </ul>
-              <ul class="tablet tablet1">
-                <div class="box3">
-                  <img class="img3" src="images/original 1.jpg">
+              </div>
+          </ul>
+          <ul class="tablet tablet1">
+            <div class="box3">
+              <img class="img3"style="width: 254px;" src="images/original 1.jpg">
+              <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+              <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+              </div>
+                <div id="F" class="box3">
+                  <img class="img3"style="width: 254px;" src="images/original 1.jpg">
                   <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
                   <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-                  </div>
-                    <div id="F" class="box3">
-                      <img class="img3" src="images/original 1.jpg">
-                      <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-                      <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-                  </div>
-              </ul>
-              <ul class="tablet tablet1">
-                <div class="box3">
-                  <img class="img3" src="images/original 1.jpg">
+              </div>
+          </ul>
+          <ul class="tablet tablet1">
+            <div class="box3">
+              <img class="img3"style="width: 254px;" src="images/original 1.jpg">
+              <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
+              <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
+              </div>
+                <div id="F" class="box3">
+                  <img class="img3"style="width: 254px;" src="images/original 1.jpg">
                   <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
                   <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-                  </div>
-                    <div id="F" class="box3">
-                      <img class="img3" src="images/original 1.jpg">
-                      <li style="font-weight: bold; font-size: 18px; line-height: 132%; color:#112B3C;;" class="pl-2 pb-1 pt-2">tarpeter.hu</li>
-                      <li style="width: 140px; font-size: 14px; line-height: 132%;color: #112B3C;" class="box3txt pl-2 pr-3">Fotó és amerikai autó bérlés</li>
-                  </div>
-              </ul>
-            </div>
-            </div>
-          </div>
-          <div class="row pt-5">
-            <a class="webcs4" href="referenciák.html">referenciák</a>
-        </div>  
-
+              </div>
+          </ul>
+        </div>
+        </div>
+      </div>
+      <div class="row pt-5">
+        <a class="webcs4" href="referenciák.html">referenciák</a>
+    </div>  
+    </section>
+  <!--FOOTER-->
     <footer class="footerh">
         <div class="container">
           <div id="flex4" class="row pt-5">
