--- a/Hirlista.html
+++ b/Hirlista.html
@@ -23,7 +23,7 @@
 <body>
   <header
     class="header-container m-auto d-flex flex-nowrap w-100 justify-content-md-center justify-content-around align-items-center">
-    <a class="m-auto" href="Fooldal.html"><img src="images/Nyiregyhazi_Kosarsuli_logo.png" alt="Logó" /></a>
+    <a class="m-auto" href="index.html"><img src="images/Nyiregyhazi_Kosarsuli_logo.png" alt="Logó" /></a>
     <ul class="nav m-auto d-none d-md-flex">
       <li><a href="Hirlista.html">Hírek</a></li>
       <li><a href="A kosarsuli.html">A kosársuli</a></li>
