--- a/Hirlista.html
+++ b/Hirlista.html
@@ -47,7 +47,7 @@
           <a class="dropdown-item d-flex align-items-center" href="#">U13</a>
         </div>
       </li>
-      <li><a href="#">Galléria</a></li>
+      <li><a href="#">Galéria</a></li>
       <li><a href="#">Közérdekű</a></li>
       <li><a href="#">Kapcsolat</a></li>
     </ul>
@@ -65,7 +65,7 @@
         <a href="#">Edzők</a>
         <a href="#">Létesítmények</a>
         <a href="#">Mérkőzéseink</a>
-        <a href="#">Galléria</a>
+        <a href="#">Galéria</a>
         <a href="#">Közérdekű</a>
         <a href="#">Kapcsolat</a>
       </div>
@@ -81,14 +81,14 @@
           <img class="ml-3 ml-sm-0" src="images/basketball2.svg" alt="" />
           <h3 class="d-flex align-items-center">Hírek, aktualitások</h3>
           <div
-            class="d-flex flex-wrap mt-3 mt-lg-0 ml-3 ml-sm-0 justify-content-md-end justify-content-around search-items">
+            class="d-flex flex-wrap mt-3 mt-lg-0 ml-3 ml-sm-0 justify-content-md-end justify-content-center justify-content-sm-around search-items">
             <button class="btn active">összes</button>
-            <button class="btn m-md-auto">felnőtt</button>
-            <button class="btn m-md-auto">u7</button>
-            <button class="btn m-md-auto">u9</button>
-            <button class="btn m-md-auto">u11</button>
-            <button class="btn m-md-auto">u13</button>
-            <button class="btn m-md-auto">u15</button>
+            <button class="btn m-sm-auto">felnőtt</button>
+            <button class="btn m-sm-auto">u7</button>
+            <button class="btn m-sm-auto">u9</button>
+            <button class="btn m-sm-auto">u11</button>
+            <button class="btn m-sm-auto">u13</button>
+            <button class="btn m-sm-auto">u15</button>
           </div>
         </div>
       </div>
