--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </style>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@8.3.0/swiper-bundle.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
@@ -49,7 +50,7 @@
           <a class="dropdown-item d-flex align-items-center" href="#">U13</a>
         </div>
       </li>
-      <li><a href="#">Galléria</a></li>
+      <li><a href="#">Galéria</a></li>
       <li><a href="#">Közérdekű</a></li>
       <li><a href="#">Kapcsolat</a></li>
     </ul>
@@ -67,7 +68,7 @@
         <a href="#">Edzők</a>
         <a href="#">Létesítmények</a>
         <a href="#">Mérkőzéseink</a>
-        <a href="#">Galléria</a>
+        <a href="#">Galéria</a>
         <a href="#">Közérdekű</a>
         <a href="#">Kapcsolat</a>
       </div>
@@ -266,14 +267,14 @@
           <img class="ml-3 ml-sm-0" src="images/basketball2.svg" alt="" />
           <h3 class="d-flex align-items-center">Hírek, aktualitások</h3>
           <div
-            class="d-flex flex-wrap mt-3 mt-lg-0 ml-3 ml-sm-0 justify-content-md-end justify-content-around search-items">
+            class="d-flex flex-wrap mt-3 mt-lg-0 ml-3 ml-sm-0 justify-content-md-end justify-content-center justify-content-sm-around search-items">
             <button class="btn active">összes</button>
-            <button class="btn m-md-auto">felnőtt</button>
-            <button class="btn m-md-auto">u7</button>
-            <button class="btn m-md-auto">u9</button>
-            <button class="btn m-md-auto">u11</button>
-            <button class="btn m-md-auto">u13</button>
-            <button class="btn m-md-auto">u15</button>
+            <button class="btn m-sm-auto">felnőtt</button>
+            <button class="btn m-sm-auto">u7</button>
+            <button class="btn m-sm-auto">u9</button>
+            <button class="btn m-sm-auto">u11</button>
+            <button class="btn m-sm-auto">u13</button>
+            <button class="btn m-sm-auto">u15</button>
           </div>
         </div>
       </div>
@@ -395,23 +396,24 @@
           </div>
           <ol class="row achievements">
             <ul>
-              <li>7</li>
+              <li data-num="7"></li>
               <li>különböző korosztály</li>
             </ul>
             <ul>
-              <li>11</li>
+              <li data-num="11"></li>
               <li>szakképzett edző</li>
             </ul>
-            <ul>
-              <li>100+</li>
+            <ul class="players">
+              <li data-num="100"></li>
+              <span>+</span>
               <li>leány játékos</li>
             </ul>
             <ul>
-              <li>9</li>
+              <li data-num="9"></li>
               <li>bajnoki cím</li>
             </ul>
             <ul>
-              <li>1</li>
+              <li data-num="1"></li>
               <li>válogatott játékos</li>
             </ul>
           </ol>
@@ -470,7 +472,7 @@
       <div class="row row-cols-2 row-cols-xl-4 row-cols-lg-3 galleries">
         <div class="col">
           <a href="#">
-            <img src="images/basketball_team.jpg" alt="" />
+            <div class="pic"><img src="images/basketball_team.jpg" alt="" /></div>
             <div class="d-flex flex-column d-lg-block">
               <span class="font-weight-bold">ZTE-Nyíregyházi Kosársuli</span><br class="d-lg-none d-block" />
               (72 db kép)
@@ -481,7 +483,7 @@
         </div>
         <div class="col">
           <a href="#">
-            <img src="images/basketball_team.jpg" alt="" />
+            <div class="pic"><img src="images/basketball_team.jpg" alt="" /></div>
             <div class="d-flex flex-column d-lg-block">
               <span class="font-weight-bold">ZTE-Nyíregyházi Kosársuli</span><br class="d-lg-none d-block" />
               (72 db kép)
@@ -492,7 +494,7 @@
         </div>
         <div class="col">
           <a href="#">
-            <img src="images/basketball_team.jpg" alt="" />
+            <div class="pic"><img src="images/basketball_team.jpg" alt="" /></div>
             <div class="d-flex flex-column d-lg-block">
               <span class="font-weight-bold">ZTE-Nyíregyházi Kosársuli</span><br class="d-lg-none d-block" />
               (72 db kép)
@@ -503,7 +505,7 @@
         </div>
         <div class="col">
           <a href="#">
-            <img src="images/basketball_team.jpg" alt="" />
+            <div class="pic"><img src="images/basketball_team.jpg" alt="" /></div>
             <div class="d-flex flex-column d-lg-block">
               <span class="font-weight-bold">ZTE-Nyíregyházi Kosársuli</span><br class="d-lg-none d-block" />
               (72 db kép)
@@ -514,7 +516,7 @@
         </div>
         <div class="col">
           <a href="#">
-            <img src="images/basketball_team.jpg" alt="" />
+            <div class="pic"><img src="images/basketball_team.jpg" alt="" /></div>
             <div class="d-flex flex-column d-lg-block">
               <span class="font-weight-bold">ZTE-Nyíregyházi Kosársuli</span><br class="d-lg-none d-block" />
               (72 db kép)
@@ -525,7 +527,7 @@
         </div>
         <div class="col">
           <a href="#">
-            <img src="images/basketball_team.jpg" alt="" />
+            <div class="pic"><img src="images/basketball_team.jpg" alt="" /></div>
             <div class="d-flex flex-column d-lg-block">
               <span class="font-weight-bold">ZTE-Nyíregyházi Kosársuli</span><br class="d-lg-none d-block" />
               (72 db kép)
@@ -536,7 +538,7 @@
         </div>
         <div class="col">
           <a href="#">
-            <img src="images/basketball_team.jpg" alt="" />
+            <div class="pic"><img src="images/basketball_team.jpg" alt="" /></div>
             <div class="d-flex flex-column d-lg-block">
               <span class="font-weight-bold">ZTE-Nyíregyházi Kosársuli</span><br class="d-lg-none d-block" />
               (72 db kép)
@@ -547,7 +549,7 @@
         </div>
         <div class="col">
           <a href="#">
-            <img src="images/basketball_team.jpg" alt="" />
+            <div class="pic"><img src="images/basketball_team.jpg" alt="" /></div>
             <div class="d-flex flex-column d-lg-block">
               <span class="font-weight-bold">ZTE-Nyíregyházi Kosársuli</span><br class="d-lg-none d-block" />
               (72 db kép)
@@ -635,6 +637,7 @@
       },
     });
   </script>
+  <script src="assets/js/script.js"></script>
 </body>
 
 </html>
